<resources>
    <string name="app_name">BatteryChargeLogger</string>
    <string name="capacity">Capacity</string>
    <string name="update">Update</string>
    <string name="status">Status</string>

    <string name="google_play_missing">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="sheet_id">Sheet Id</string>
    <string name="sheet_name">Sheet Name</string>
    <string name="save">Save</string>
    <string name="clear_log">CL</string>
    <string name="refresh_log">R</string>
    <string name="delete_log">Del</string>
</resources>